--- a/src/common/main.less
+++ b/src/common/main.less
@@ -29,5 +29,18 @@
   .NewEvent{
     background: #ffffff;
     padding-top: 15px;
+    button{
+      margin-top: 0px;
+    }
+    .buttonGroup{
+      margin-top: 0px;
+      margin-bottom: 0px;
+    }
   }
+}
+.WaitEvent{
+  background: #ffffff;
+}
+.DetailEvent{
+  background: #f0f0f0;
 }
