--- a/src/common/main.less
+++ b/src/common/main.less
@@ -38,9 +38,18 @@
     }
   }
 }
-.WaitEvent,.ComplainList{
+.Content,.WaitEvent,.ComplainList{
   background: #ffffff;
 }
 .DetailEvent{
   background: #f0f0f0;
+}
+.eventStatistic{
+  background: #ffffff;
+  width: 800px;
+  height: auto;
+  margin: 0 auto;
+}
+#searchBar,#eventChart{
+  margin: 0 auto;
 }
