--- a/src/common/main.less
+++ b/src/common/main.less
@@ -50,6 +50,12 @@
   height: auto;
   margin: 0 auto;
 }
+.fromStatistic{
+  background: #ffffff;
+  width: 900px;
+  height: auto;
+  margin: 0 auto;
+}
 #searchBar,#eventChart{
   margin: 0 auto;
 }
